--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "morgan": "^1.9.1",
     "mysql": "^2.16.0",
     "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
     "swagger-ui-express": "^4.0.2",
     "yamljs": "^0.3.0"
   }
